# ClusterX

./: .env  .gitignore  .gitkeep  .gitmodules  Cargo.toml  ClusterX.c  ClusterX.py  LICENSE  Makefile  README.md  config.json  example.csv  index.html  main.py  package-lock.json  package.json  requirements.txt
.github/workflows/: python-app.yml
config/: config.json  config.toml
data/AAPL/: data.csv
doc/: Fair Value Gap.md  Trend Recognition Algorithm.md
include/: candle.h  config.h  session.h  system_operator.h  utils.h
output/: ClusterX
python/: build.sh  main.py  test.json
python/data/: data.csv
python/src/: redis.py  structures.py  visualisation.py
resources/.obsidian/: workspace.json
src/: App.css  App.tsx  algo.py  algorithm.py  api.py  candles.py  config.json  data.py  discord.py  indicators.py  lib.rs  log.py  main.rs  structures.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src/algorithm/: decision.rs  main.rs  mod.rs  order.rs  trades.rs
src/components/: Loading.css  Loading.tsx  Topbar.css  Topbar.tsx
src/data/: analyzer.rs  handler.rs
src/data_processing/: data_analyzer.py  data_handler.py  data_saver.py
src/execution/: algo.py
src/maths/: normal_distribution.rs
src/objects/: candle.rs
src/pages/: Dashboard.css  Dashboard.tsx  Home.tsx
src/strategies/: mod.rs  normal_distribution.rs
src/structures/: candle.c  session.c
src/utils/: config.rs  data_utils.py  discord.py  log.py  log.rs  math.rs  mod.rs  money.rs  system_operator.c  utils.c  utils.py  utils.rs
(+23 files in other folders)
