[package]
name = "clusterx"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21.1"
reqwest = { version = "0.12.15", features = ["blocking"]}
serde_json = "1.0.140"
polars = { version = "0.46.0", features = ["csv", "lazy", "strings", "dtype-full"] }
chrono = "0.4.40"
plotters = "0.3.7"
num = "0.4.3"
